# Cassistant

./: .gitignore  README.md  implementation_plan.md  pyproject.toml
cassistant/: __init__.py  cli.py  client.py  config.py  config.py.example  context_budget.py  hasher.py
cassistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cassistant/commands/: build.py  files.py  init.py  plan.py  rollback.py  status.py  update.py
cassistant/prompts/: analyze_file.txt  build.txt  build_index.txt  build_readme.txt  generator.txt  plan.txt
cassistant/utils/: confirm.py  printer.py
