[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cassistant"
version = "0.1.0"
description = "A Python CLI tool for llama.cpp-backed AI code intelligence and generation."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "rich>=12.0.0",
    "click>=8.0.0",
]

[project.scripts]
cass = "cassistant.cli:main"
